--- a/GroceryFinal/appsettings.json
+++ b/GroceryFinal/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=NEWERA;Database=GroceryFinal;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=NEWERA;Database=GroceryFinal;Trusted_Connection=True;TrustServerCertificate=True",
   }
 }
