--- a/GroceryFinal.Utility/GroceryFinal.Utility.csproj
+++ b/GroceryFinal.Utility/GroceryFinal.Utility.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.2" />
   </ItemGroup>
 
 </Project>
