--- a/GroceryFinal/GroceryFinal.csproj
+++ b/GroceryFinal/GroceryFinal.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.2">
       <PrivateAssets>all</PrivateAssets>
@@ -19,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\GroceryFinal.DataAccess\GroceryFinal.DataAccess.csproj" />
     <ProjectReference Include="..\GroceryFinal.Model\GroceryFinal.Model.csproj" />
+    <ProjectReference Include="..\GroceryFinal.Utility\GroceryFinal.Utility.csproj" />
   </ItemGroup>
 
 </Project>
